# serde-seeded

./: .gitattributes  Cargo.toml
proc-macro-definitions/: Cargo.toml
proc-macro-definitions/src/: de.rs  lib.rs  ser.rs  shared.rs
src/: lib.rs
