[package]
name = "serde-seeded"
version = "0.0.0-dev"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3.12"
log = "0.4.11"
serde = "1.0.115"
serde-seeded_proc-macro-definitions = { path = "proc-macro-definitions" }
